# account-intelligence

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml
.claude/: settings.json  settings.local.json.example
.claude/agents/: postmortem.md
.claude/commands/: harness-retrofit.md  harness-upstream.md
.claude/hooks/: preflight_command_name.sh  stop.sh  user_prompt_submit.sh
.claude/skills/: harness-design-system  harness-implement-design-handoff  harness-new-feature  harness-prepare-design-context  harness-review-pr  harness-session-start  harness-setup-llm-client  harness-tdd-cycle  harness-update-progress
.github/workflows/: audit-narratives.yml
config/: defaults.json
config/prompts/: narrative.v1.md  narrative.v2.md
docs/: architecture.md  debugging-llm-output.md  signal-routing.md
docs/adr/: README.md  adr-001-inbound-mail-provider.md  (+8 more)
frontend/: eslint.config.mjs  package.json  tsconfig.json
scripts/: __init__.py  audit_narratives.py  capture_narrative_baselines.py  check_narrative_baselines.py  derive_quantas_labs_baseline.py  reanchor_demo_data.py  simulate_history.py  validate_per_week.py
shared/: hooks-block.partial
src/: analytics.py  worker.py
supabase/: README.md
tests/: test_analytics.py  test_api_keys.py  test_audit_harness.py  test_audit_harness_parity.py  test_audit_schema_strict_mode.py  test_confidence.py  test_contact_factory.py  test_db_phase4.py  test_db_workspaces.py  test_derive_display_name.py  test_event_route.py  test_fixture_source.py  test_generator.py  test_health.py  test_inbound.py  test_invariants.py  test_llm_observability.py  test_narrative_baselines.py  test_normalizer.py  test_observability_content_capture.py  test_outreach_pipeline.py  test_outreach_route.py  test_pipeline_account_linkage.py  test_product_event_pipeline.py  test_product_usage_scorer.py  test_product_usage_trajectory.py  test_rate_limit.py  test_router_outbound.py  test_routing_cascade.py  test_scheduler.py  test_shared_inbox.py  test_worker.py
(+425 files in other folders)
