[project]
name = "account-intelligence"
version = "0.1.0"
description = "Python worker (root) + TypeScript frontend (frontend/)"
license = { text = "BUSL-1.1" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.96.0",
    "cryptography>=42.0",
    "httpx>=0.27",
    "openai>=2.0,<3",
    "fastapi>=0.136.1",
    "pyyaml>=6.0",
    "opentelemetry-instrumentation-anthropic>=0.40.9",
    "opentelemetry-sdk>=1.27.0",
    "posthog[otel]>=3.7.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "sendgrid>=6.11",
    "supabase>=2.28.3",
    "uvicorn[standard]>=0.46.0",
    "opentelemetry-instrumentation-openai-v2>=2.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "pyright>=1.1.409",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.optional-dependencies]
simulator = ["rich>=13.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["frontend"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "frontend", ".venv"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "none"

# DB modules call into supabase-py, whose response.data is a JSON union
# (bool|str|int|float|dict|list|None) that pyright can't narrow without
# helper assertions. Suppress the resulting noise here so real type errors
# in domain/pipeline/server code still surface.
[[tool.pyright.executionEnvironments]]
root = "src/db"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportIndexIssue = "none"
reportOptionalSubscript = "none"
reportOptionalMemberAccess = "none"
reportCallIssue = "none"
reportOperatorIssue = "none"
